--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,9 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "@react-buddy/ide-toolbox": "^2.3.1",
+    "@react-buddy/palette-mui": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
